--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aenum==2.0.8
 alembic==1.0.0
 asn1crypto==0.24.0
+bcrypt==3.0.0
 BeautifulSoup==3.2.1
 beautifulsoup4==4.6.0
 bs4==0.0.1
@@ -24,7 +25,7 @@ itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
-nltk==3.0.2
+nltk==3.1.0
 psutil==5.4.6
 pycparser==2.18
 PyJWT==1.4.2
