--- a/client/bower.json
+++ b/client/bower.json
@@ -26,7 +26,8 @@
     "ng-csv": "^0.3.6",
     "angular-bootstrap": "^2.5.0",
     "chart.js": "^2.7.2",
-    "angular-chart.js": "^1.1.1"
+    "angular-chart.js": "^1.1.1",
+    "angular-moment": "^1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.x",
