--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,27 @@
     "ng-tags-input": "^3.2.0"
   },
   "devDependencies": {
+    "ajv": "^6.0.0",
+    "babel-eslint": "^9.0.0",
     "bardjs": "^0.1.8",
     "browser-sync": "^2.7.13",
     "chai": "^3.5.0",
     "chalk": "^1.1.0",
     "connect-modrewrite": "^0.10.1",
     "del": "^2.2.0",
-    "eslint": "^2.5.3",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-airbnb-es5": "^1.2.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-html-reporter": "^0.4.10",
-    "eslint-plugin-angular": "1.0.0",
+    "eslint-plugin-angular": "^3.3.0",
+    "eslint-plugin-html": "^4.0.5",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-lodash": "^2.7.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
     "globby": "^4.0.0",
@@ -72,6 +84,7 @@
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "spock": "^0.3.3",
+    "standard": "^12.0.1",
     "stream-series": "^0.1.1",
     "yargs": "^4.3.2"
   },
@@ -80,6 +93,7 @@
   },
   "scripts": {
     "build": "gulp build",
-    "test": "gulp test"
+    "test": "gulp test",
+    "lint": "eslint --fix ."
   }
 }
