--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "appgen-v3"
   ],
   "dependencies": {
+    "angular-moment": "^1.2.0",
     "lodash": "^3.10.0",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "ng-tags-input": "^3.2.0"
   },
   "devDependencies": {
