fixed adding feed issue

--- a/client/package.json
+++ b/client/package.json
@@ -100,6 +100,7 @@
     "test": "gulp test",
     "lint": "eslint --fix .",
     "start": "npm run lint && gulp serve",
+    "startServer": "cd ../server && export FLASK_APP=run.py && export FLASK_ENV=development && flask run",
     "startBoth": "concurrently --kill-others-on-fail \"npm run start\" \"cd ../server && export FLASK_APP=run.py && export FLASK_ENV=development && flask run\""
   }
 }
