--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aenum==2.0.8
 alembic==1.0.0
 asn1crypto==0.24.0
 BeautifulSoup==3.2.1
-bcrypt
+bcrypt==3.1.4
 beautifulsoup4==4.6.0
 bs4==0.0.1
 certifi==2018.4.16
