--- a/client/.bowerrc
+++ b/client/.bowerrc
@@ -1,5 +1,5 @@
 {
-  "directory": "app/bower_components",
+  "directory": "bower_components",
   "registry": {
 		"search": [
 			"https://registry.bower.io"
