--- a/client/bower.json
+++ b/client/bower.json
@@ -16,7 +16,6 @@
     "lodash": "4.x",
     "tmix-caching": "1.x",
     "ng-tags-input": "3.2.0",
-    "angular-modal-service": "^0.12.1",
     "ngMeta": "^1.0.0",
     "angular-xeditable": "^0.8.1",
     "angular-smart-table": "^2.1.11",
@@ -36,7 +35,6 @@
   },
   "resolutions": {
     "angular": "1.5.x",
-    "it-mlaf-sass": "4.x",
-    "lodash": "4.x"
+    "it-mlaf-sass": "4.x"
   }
 }
